Bug 123104 - FILESAVE DOCX Cell gets resized after saving in LO
Summary: FILESAVE DOCX Cell gets resized after saving in LO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-02-01 10:30 UTC by NISZ LibreOffice Team
Modified: 2019-06-04 11:46 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The original document. (33.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-02-01 10:31 UTC, NISZ LibreOffice Team
Details
The saved document. (17.86 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-02-01 10:31 UTC, NISZ LibreOffice Team
Details
creenshot of the original and exported document side by side in Writer. (273.41 KB, image/png)
2019-02-01 10:31 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-02-01 10:30:46 UTC
Description:
After saving in LO one of the cells in the bottom table has its height changed.

Steps to Reproduce:
    1. Open the original document in LO.
    2. Save it as docx.
    3. Reload.
    4. Notice the changes.

Actual Results:
One of the cells has a smaller height and a white rectangle appears where it was before.

Expected Results:
Expected results: It should stay the same height.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-02-01 10:31:22 UTC
Created attachment 148829 [details]
The original document.
Comment 2 NISZ LibreOffice Team 2019-02-01 10:31:43 UTC
Created attachment 148830 [details]
The saved document.
Comment 3 NISZ LibreOffice Team 2019-02-01 10:31:59 UTC
Created attachment 148831 [details]
creenshot of the original and exported document side by side in Writer.
Comment 4 Durgapriyanka 2019-02-01 17:54:38 UTC
Thank you for reporting the bug. I confirm the bug in

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 5 Buovjaga 2019-02-10 18:49:16 UTC
Bibisected with 44max to https://gerrit.libreoffice.org/plugins/gitiles/core/+/29cbbad64088354425c606f9eb6c267bdf7731dc%5E%21/

DOCX import: fix rounding error in table cell widths

Adding Cc: to Miklos Vajna

(Bibisect result was a very small range)
Comment 6 Commit Notification 2019-03-12 07:44:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e502463fa9a601963aa9f5a8783eb1318de36c13%5E%21

tdf#123104 DOCX import: fix lack of vertical merge due to rounding

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-03-13 11:31:48 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos Vajna, thanks for fixing this issue!
Comment 8 Commit Notification 2019-03-13 11:36:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/77cc7463bcd3fe9a6528ed1b0309708608cd1cc7%5E%21

tdf#123104 DOCX import: fix lack of vertical merge due to rounding

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.