tdf#123104 DOCX import: fix lack of vertical merge due to rounding

Regression from commit 29cbbad64088354425c606f9eb6c267bdf7731dc (DOCX
import: fix rounding error in table cell widths, 2014-11-07), which
changed truncation to rounding for the twips -> 1/10000th of relative
width conversion during import, but left export unchanged.

But adapting the export is not that easy: one part would be the
std::unique() call in
WW8TableNodeInfoInner::getColumnWidthsBasedOnAllRows() to not require
exact comparison, but doing so has it own side effects (multiple failing
tests).

So just revert the mentioned commit, as a minor rounding error is much
better than a broken vertical merge. And once it's clear how to adapt
export at the same time, this rounding on the import side can be
re-introduced.

Change-Id: I9e01ea5cc2c2f8aabe1e21cb8118c9c0e2c45494